tests/parsing/smtlib/mcil/errors/235_define-system_bad_subsys_decl_5.expected
File "tests/parsing/smtlib/mcil/errors/235_define-system_bad_subsys_decl_5.mcil", line 1, character 32-33:
1 | (define-system sys :subsys (a (b)) )
                                    ^
Error while parsing a subsystem instantiation, read a closing parenthesis,
      but expected a symbol as an argument.
